--- a/styles.css
+++ b/styles.css
@@ -4,13 +4,17 @@ body {
 
     font-family: Arial, sans-serif;
 
+    background: linear-gradient(135deg, #8d9ef5, #51718c); /* Background color blend */
+
+    color: #fff; /* Text color */
+
 }
 
 
 
 header {
 
-    background-color: #333;
+    background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent black background for header */
 
     color: #fff;
 
@@ -22,41 +26,13 @@ header {
 
 
 
-nav {
-
-    background-color: #444;
-
-    color: #fff;
-
-    text-align: center;
-
-    padding: 10px 0;
-
-}
-
-
-
-nav a {
-
-    text-decoration: none;
-
-    color: #fff;
-
-    margin: 0 10px;
-
-}
-
-
-
 main {
 
-    display: grid;
+    display: flex;
 
-    grid-template-columns: 1fr 1fr;
+    flex-direction: column;
 
-    grid-gap: 20px;
-
-    padding: 20px;
+    align-items: center;
 
 }
 
@@ -64,21 +40,11 @@ main {
 
 section {
 
-    display: flex;
+    width: 100%;
 
-    align-items: center;
-
-    justify-content: center;
-
-    padding: 40px;
+    padding: 80px 20px; /* Increase padding for spacing between sections */
 
     text-align: center;
-
-    background-color: #f9f9f9;
-
-    border-radius: 8px;
-
-    margin-bottom: 20px;
 
 }
 
@@ -90,7 +56,23 @@ section img {
 
     border-radius: 50%;
 
-    margin-right: 20px;
+    margin-bottom: 20px; /* Add some space below the image */
+
+}
+
+
+
+h2 {
+
+    margin-bottom: 20px; /* Add some space below the heading */
+
+}
+
+
+
+p {
+
+    margin-bottom: 20px; /* Add some space below the paragraph */
 
 }
 
@@ -104,7 +86,7 @@ button.video-btn {
 
     border: none;
 
-    border-radius: 25px; /* Making buttons oval */
+    border-radius: 25px;
 
     padding: 10px 20px;
 
@@ -122,21 +104,9 @@ button.video-btn:hover {
 
 
 
-.section-content {
-
-    display: flex;
-
-    flex-direction: column;
-
-    align-items: center;
-
-}
-
-
-
 footer {
 
-    background-color: #333;
+    background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent black background for footer */
 
     color: #fff;
 
@@ -144,10 +114,7 @@ footer {
 
     padding: 10px 0;
 
-    position: fixed;
-
-    bottom: 0;
-
     width: 100%;
 
 }
+
