--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@ body {
 
     font-family: Arial, sans-serif;
 
-    background: linear-gradient(135deg, #8d9ef5, #51718c); /* Background color blend */
+    background:#711cad; /* Background color blend */
 
     color: #fff; /* Text color */
 
